# OLEG_SHILOV_OPS

./: db.sqlite3  manage.py  pyproject.toml
accounts/: admin.py  forms.py  views.py
accounts/migrations/: 0001_initial.py
accounts/templates/accounts/: change_password.html  login.html  register.html
my_quadratic_solver/: asgi.py  settings.py  test.code-workspace  urls.py  wsgi.py
news/: admin.py  forms.py  models.py  urls.py  views.py
news/migrations/: 0001_initial.py
news/templates/: layout.html
news/templates/news/: create_post.html  news_by_category.html  news_by_tag.html  news_detail.html  news_list.html
solver/: admin.py  models.py  urls.py  views.py
solver/migrations/: 0001_initial.py
solver/templates/: layout.html
solver/templates/solver/: menu.html  solve.html  trainer.html
static/css/: style.css
staticfiles/css/: admin_custom.css  style.css
stats/: urls.py  views.py
stats/templates/stats/: stats_page.html
